# spovm

./: .gitignore  LICENSE.txt  README.txt
lr1/: CMakeLists.txt  main.cpp  process.cpp
lr1/headers/: MainHeader.h  processController.h  systemFunc.h
lr1/lib/: CMakeLists.txt  processController.cpp  systemFunc.cpp
lr2/: CMakeLists.txt  input.cpp  main.cpp  printer.cpp
lr2/headers/: Event.h  MainHeader.h  Pipe.h  Process.h  QueueFile.h  Service.h
lr2/lib/: CMakeLists.txt  Process.cpp  Service.cpp
lr3/: CMakeLists.txt  client.cpp  main.cpp  process.cpp  server.cpp  алгоритм.txt
lr3/headers/: Event.h  MainHeader.h  Pipe.h  Semaphore.h  Service.h  debug.hpp  main.h  pipe.hpp  semaphore.hpp  service.hpp
lr3/lib/: CMakeLists.txt  Event.cpp  Service.cpp
lr4/: CMakeLists.txt  main.cpp
lr4/headers/: MainHeader.h  mutex.hpp  ns_thread.h  service.hpp  thread.hpp
lr5/: CMakeLists.txt  main.cpp
lr5/dll/: CMakeLists.txt  FileAIO.cpp  fileAsync.cpp  fileAsync.def
lr5/headers/: FileAIO.h  MainHeader.h  Service.h  dllLoader.hpp  fileAsync.h  main.h  mutex.hpp  service.hpp
lr6/: CMakeLists.txt  main.cpp
lr6/headers/: debug.hpp  dllLoader.hpp  fileAsync.h  process.hpp
lr7/: CMakeLists.txt  main.cpp
lr7/headers/: debug.hpp  main.h
lr7/headers/fileSystemUser/: directoryUser.hpp  fileCommands.h  fileObject.hpp  fileSystemExample.txt  fileSystemUser.h  stringService.hpp
lr7/headers/fileSystemUser/back/: fileCommands.h  fileCommands.hpp  fileSystemUser.hpp  fileUser.hpp
lr7/lib/: CMakeLists.txt  fileCommands.cpp  fileSystemUser.cpp
